syntax = "proto3";

package com.road.yishi.proto.battle;

message HeroMsg {
  int32 heroId = 1;
  int32 livingId = 2;
  int32 userId = 3;
  int32 userPics = 4;
  int32 tempId = 5;
  int32 type = 6;
  string nickName = 7;
  int32 grade = 8;
  int32 side = 9;
  int32 pos = 10;
  int32 maxHp = 11;
  int32 initHp = 12;
  int32 hp = 13;
  int32 initHp2 = 14;
  int32 hp2 = 15;
  int32 sp = 16;
  string slotAvata = 17;
  string clothAvate = 18;
  string cloakPath = 19;
  string hairPath = 20;
  int32 captain = 21;
  string res = 22;
  int32 qteTime = 23;
  int32 castTime = 24;
  int32 pics = 25;
  int32 job = 26;
  int32 phyAttack = 27;
  int32 phyDefence = 28;
  int32 magAttack = 29;
  int32 magDefence = 30;
  int32 forceHit = 31;
  int32 parry = 32;
  int32 sites = 33;
  string skillScript = 34;
  int32 pawnTempId = 35;
  repeated int32 skillId = 36;
  int32 attackWound = 37;
  int32 hitWound = 38;
  int32 attackModel = 39;
  repeated int32 starBuffer = 40;
  repeated int32 item = 41;
  int32 headId = 42;
  repeated int32 buffers = 43;
  bool isShow = 44;
  string serverName = 45;
  string wingAvata = 46;
  repeated int32 trials = 47;
  repeated int32 battleDrop = 48;
  string hatAvata = 49;
  string fashionArmAvata = 50;
  string fashionClothAvata = 51;
  bool hide = 52;
  int32 appellId = 53;
  int32 fireResi = 54;
  int32 waterResi = 55;
  int32 electResi = 56;
  int32 windResi = 57;
  int32 darkResi = 58;
  int32 lightResi = 59;
  string followSkills = 60;
  string changeSkills = 61;
  string defaultSkills = 62;
  int32 awake = 63;
  int32 livingId2 = 64;
  repeated int32 changeSkillId = 65;
  string fateSkillTempIds = 66;
  bool isChange = 67;
  int32 petQuality = 68;
  int32 fightCapacity = 69;
  int32 reduceResi = 70;
  int32 strength = 71;
  int32 tenacity = 72;
  bool hasShadow = 73;
  repeated int32 marriageSkills = 74;
  int32 mateId = 75;
  repeated int32 marSkills = 76;
  string mateServerName = 77;
  int32 curturn = 78;
  repeated int32 talentSealOrder = 79;
  repeated int32 multiLanNickName = 80;
  int32 segmentId = 81;
  int32 mulSportScore = 82;
  int32 spMax = 83;
  int32 consortiaId = 84;
  bool isRobot = 85;
  int32 atkpotentialAtr = 86;
  int32 matpotentialAtr = 87;
  int32 defpotentialAtr = 88;
  int32 mdfpotentialAtr = 89;
  int32 hppotentialAtr = 90;
}
