syntax = "proto3";

package com.road.yishi.proto.room;

message KillPlayerRspMsg {
  int32 roomId = 1;
  int32 killedPlayerId = 2;
}
