syntax = "proto3";

package com.road.yishi.proto.room;

message PlayerReadyRspMsg {
  repeated int32 readyState = 1;
}
