syntax = "proto3";

package com.road.yishi.proto.room;

message RoomStateRspMsg {
  int32 roomState = 1;
}
